added concurrent request to exchange api